# EasyGL

./: CMakeLists.txt  README.md  easygl.cpp  easygl.h  main.cpp
cmake/modules/: FindGLFW3.cmake
include/EasyGL/: easygl.h
source/: easygl.cpp
